Users/UserAPI/bridge/base/users-api-deployment.yaml
#! users-api-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: users-api
    namespace: taskapi
    labels:
        com.docker.compose.project: taskapi
        com.docker.compose.service: users-api
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: taskapi
            com.docker.compose.service: users-api
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: taskapi
                com.docker.compose.service: users-api
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: users-api
                  image: taskapi-users-api
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: users-api-8080
                      containerPort: 8080
